# reviewscope

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
configs/: config.yaml
src/: data.py  model.py  train.py
src/api/: dependencies.py  main.py  routes.py  schemas.py
tests/: conftest.py  test_api.py  test_data.py  test_model.py
